--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
   <div class="logo">Sistema Contábil</div>
 
   <div class="menu">
-    <a routerLink="/home">🏠 Home</a>
+    <a routerLink="/dashboard">🏠 Home</a>
 
     <div class="dropdown">
       <a class="dropbtn">📝 Cadastros ▼</a>
